--- a/src/components/home.css
+++ b/src/components/home.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@600;800&display=swap');
 
 body {
-    background-color: #0d2d3c;
+    background-color: #3c0d0d;
     font-family: 'Plus Jakarta Sans', sans-serif;
 }
 
