--- a/src/components/projects.css
+++ b/src/components/projects.css
@@ -42,8 +42,11 @@
 }
 
 .project-image img {
-    width: 100%;
-    height: 100%;
+    width: 80%;
+    margin: auto;
+    display: flex;
+    padding: 10px;
+    height: auto;
     object-fit: cover;
 }
 
