--- a/src/components/home.css
+++ b/src/components/home.css
@@ -104,6 +104,10 @@ body {
     .hero-section {
         width: 95%;
     }
+
+    .hero-section h1 {
+        margin-bottom: -20px;
+    }
     
     .content-wrapper {
         margin-right: 20px;
@@ -117,11 +121,32 @@ body {
 @media (max-width: 768px) {
     .hero-section {
         flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
     
     .content-wrapper {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
         margin-right: 0;
         max-width: 100%;
+    }
+
+    .hero-section p {
+        text-align: center;
+    }
+
+    .hero-section h1 {
+        margin-bottom: -10px;
+    }
+
+    .nav-words {
+        justify-content: center;
+    }
+
+    .social-icons {
+        justify-content: center;
     }
     
     .image-wrapper {
@@ -129,6 +154,8 @@ body {
         margin-left: 0;
         margin-top: 40px;
         max-width: 100%;
+        display: flex;
+        justify-content: center;
     }
     
     .profile-image {
