--- a/src/components/home.css
+++ b/src/components/home.css
@@ -125,6 +125,7 @@ body {
         flex-direction: column;
         align-items: center;
         text-align: center;
+        margin-top: 50px;
     }
     
     .content-wrapper {
@@ -164,5 +165,22 @@ body {
         max-height: 400px;
         width: 100%;
         object-fit: contain;
+    }
+}
+
+.mobile-image-wrapper {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .mobile-image-wrapper {
+        display: block;
+        width: 100%;
+        max-width: 400px;
+        margin: 20px 0;
+    }
+    
+    .image-wrapper {
+        display: none;
     }
 }
